--- a/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.scss
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.scss
@@ -6,6 +6,12 @@
     margin-bottom: 8vh;
 }
 
+@media (max-width: 691px) {
+    .register {
+        width: 90%;
+    }
+}
+
 a {
     text-decoration: none;
 }
