--- a/Cliente-Angular/src/app/components/footer/footer.component.html
+++ b/Cliente-Angular/src/app/components/footer/footer.component.html
@@ -1,22 +1,22 @@
 <div class="footer container-fluid mt-5">
     <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 mb-2 mb-md-0">
             <div class="row">
                 <div class="col-12">
                     <h4 class="text-center">Síguenos en:</h4>
                 </div>
                 <div class="col-12 mt-3">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-6 col-md-1">
+                        <div class="col-6 col-md-1 d-flex justify-content-center mb-2 mb-md-0">
                             <i class="bi bi-facebook"></i>
                         </div>
-                        <div class="col-6 col-md-1">
+                        <div class="col-6 col-md-1 d-flex justify-content-center">
                             <i class="bi bi-twitter"></i>
                         </div>
-                        <div class="col-6 col-md-1">
+                        <div class="col-6 col-md-1 d-flex justify-content-center mb-2 mb-md-0">
                             <i class="bi bi-instagram"></i>
                         </div>
-                        <div class="col-6 col-md-1">
+                        <div class="col-6 col-md-1 d-flex justify-content-center">
                             <i class="bi bi-github"></i>
                         </div>
                     </div>
