--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
@@ -5,11 +5,11 @@
         </div>
         <div class="col-12 mb-4">
             <div class="row">
-                <div class="col-10 d-flex justify-content-end">
+                <div class="col-8 col-md-10 d-flex justify-content-end">
                     <input #search (keyup)="lookForABook(search.value)" type="text" class="input"
                         placeholder="Busca por título, por autor...">
                 </div>
-                <div class="col-2 d-flex justify-content-start">
+                <div class="col-4 col-md-2 d-flex justify-content-start">
                     <button *ngIf="search.value" (click)="search.value = ''" class="btn bgSecundario">Borrar <i
                             class="bi bi-trash"></i> </button>
                     <button *ngIf="!search.value" class="btn bgSecundario">Buscar <i class="bi bi-search"></i> </button>
@@ -26,7 +26,7 @@
     </div>
 
     <div *ngIf="!search.value" class="row d-flex justify-content-center">
-        <div class="col-4" *ngFor="let book of bookList; let i = index">
+        <div class="col-6 col-md-4" *ngFor="let book of bookList; let i = index">
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
                     <img src="data:image/jpg;base64,{{book.img}}" class="cover" alt="">
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div *ngIf="search.value" class="row d-flex justify-content-center">
-        <div class="col-4" *ngFor="let book of searchBookList; let i = index">
+        <div class="col-6 col-md-4" *ngFor="let book of searchBookList; let i = index">
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
                     <img src="data:image/jpg;base64,{{book.img}}" class="cover" alt="">
