--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -57,15 +57,21 @@
             <div *ngIf="!authUser.id" class="row mt-4">
                 <div class="col d-flex justify-content-center">
                     <div class="row">
-                        <div class="col-7">
+                        <div class="col-12 col-lg-6">
                             <p class="signIn">Inicia sesión en el Banco de las Palabras para poder comprar o
                                 intercambiar el libro.</p>
                         </div>
-                        <div class="col-5 d-flex align-items-center justify-content-between">
-                            <button class="btn bgTerciario" routerLink="/auth/login">Iniciar sesión <i
-                                    class="bi bi-person-check-fill"></i></button>
-                            <button (click)="goBack()" class="btn outlineSecondary">Volver <i
-                                    class="bi bi-arrow-counterclockwise"></i></button>
+                        <div class="col-12 col-lg-6 mb-4 d-flex align-items-center justify-content-center">
+                            <div class="row">
+                                <div class="col-12 col-sm-6 d-flex justify-content-center">
+                                    <button class="btn bgTerciario" routerLink="/auth/login">Iniciar sesión <i
+                                            class="bi bi-person-check-fill"></i></button>
+                                </div>
+                                <div class="col-12 col-sm-6 mt-3 mt-sm-0 d-flex justify-content-center">
+                                    <button (click)="goBack()" class="btn outlineSecondary">Volver <i
+                                            class="bi bi-arrow-counterclockwise"></i></button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
