(Client) Trabajando la responsividad > products component

--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-12 mb-4">
             <div class="row">
-                <div class="col-8 col-md-10 d-flex justify-content-end">
+                <div class="col-8 col-md-10 d-flex justify-content-end align-items-center">
                     <input #search (keyup)="lookForABook(search.value)" type="text" class="input"
                         placeholder="Busca por título, por autor...">
                 </div>
