--- a/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.scss
@@ -1,9 +1,14 @@
 .imgProfile {
-    width: 250px;
-    height: 250px;
+    width: 25vw;
+    height: 25vw;
     border-radius: 15px;
 }
-
+@media (min-width: 768px) {
+    .imgProfile {
+        width: 18vw;
+        height: 18vw;
+    }
+}
 .roundImgProfile {
     width: 150px;
     height: 150px;
@@ -11,8 +16,14 @@
 }
 
 .imgCover {
-    height: 250px;
+    height: 20vw;
     border-radius: 15px;
+}
+
+@media (max-width: 768px) {
+    .imgCover {
+        height: 40vw;
+    }
 }
 
 .imgMiniCover {
@@ -40,6 +51,12 @@
     font-size: 35px;
     font-weight: bolder;
     text-shadow: 3px 3px 2px rgba(211, 149, 75, 1);
+}
+
+@media (max-width: 480px) {
+    .pPrice {
+        margin-left: 70vw;
+    }
 }
 
 @media (max-width: 992px) {
