(Client) Cambio de tipografía en los títulos h2 y h3

--- a/Cliente-Angular/src/styles.scss
+++ b/Cliente-Angular/src/styles.scss
@@ -18,6 +18,14 @@ body {
     overflow-x: hidden;
 }
 
+h2, h3 {
+    font-family: 'Gentium Plus', serif;
+}
+
+.defaultFontStyle {
+    font-family: 'Inter', sans-serif;
+}
+
 .btn {
     color: white !important; 
 
