--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -134,7 +134,8 @@
                 <div class="col-12 col-md-5 mt-3 mt-md-0 d-flex justify-content-center">
                     <div class="row">
                         <div class="col-12 d-flex align-self-center">
-                            <img class="imgProfile" src="data:image/jpg;base64,{{userOwner.img}}" alt="">
+                            <img *ngIf="userOwner.img" class="imgProfile" src="data:image/jpg;base64,{{userOwner.img}}" alt="">
+                            <img *ngIf="!userOwner.img" src="/assets/images/defaultProfile.png" class="imgProfile" alt="">
                         </div>
                     </div>
                 </div>
