(Client) Pequeño cambio en los títulos > profile component

--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -236,7 +236,7 @@
                         <img class="thumbnail" src="data:image/jpg;base64,{{book.img}}" alt="">
                     </div>
                     <div class="col-12">
-                        <h3 class="titleCard text-center mt-1">{{book.title}}</h3>
+                        <h3 class="titleCard text-center defaultFontStyle mt-1">{{book.title}}</h3>
                         <p class="text-center mb-1">{{book.author}}</p>
                     </div>
                     <div class="col-12 d-flex justify-content-center align-self-center mb-3">
