--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -226,7 +226,7 @@
             <div class="text-center text-white my-2">
                 <h3>Libros subidos</h3>
             </div>
-            <div class="col-6 col-sm-4 col-md-3 d-flex align-items-stretch" *ngFor="let book of uploadedBooksList">
+            <div class="col-6 col-sm-4 col-md-3 mt-3 d-flex align-items-stretch" *ngFor="let book of uploadedBooksList">
                 <div *ngIf="book.reserved > 0" class="reservedMark d-flex align-items-center">
                     <i class="bi bi-bookmark-star-fill"></i>
                     <span>Reservado</span>
